[project]
name = "fairgraph"
version = "0.9.0"
description = "Python API for the Human Brain Project Knowledge Graph"
readme = "README.md"
authors = [
    { name="Andrew P. Davison", email="andrew.davison@cnrs.fr" }
]
requires-python = ">=3.7"
license = {text = "Apache Software License"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3"
]
keywords = ["ebrains", "hbp", "metadata", "electrophysiology", "knowledge-graph"]
dependencies=[
    "ebrains-kg-core",
    "pathlib2",
    "python-dateutil",
    "six",
    "tabulate",
    "requests",
    "tqdm"
]

[project.urls]
"Homepage" = "https://github.com/HumanBrainProject/fairgraph"

[tool.setuptools.packages.find]
include = ["fairgraph*"]

[build-system]
 requires = [
     "setuptools",
     "wheel",
 ]
 build-backend = "setuptools.build_meta"

[tool.black]
line-length = 119