[project]
name = "fairgraph"
version = "0.11.1"
description = "Python API for the EBRAINS Knowledge Graph"
readme = "README.md"
authors = [
    { name="Andrew P. Davison", email="andrew.davison@cnrs.fr" }
]
requires-python = ">=3.7"
license = {text = "Apache Software License"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3"
]
keywords = ["ebrains", "hbp", "metadata", "electrophysiology", "knowledge-graph"]
dependencies=[
    "ebrains-kg-core",
    "python-dateutil",
    "tabulate",
    "requests"
]

[project.optional-dependencies]

dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "coverage",
    "build",
    "setuptools",
    "wheel",
    "sphinx",
    "black",
    "twine"
]

[project.urls]
"Homepage" = "https://github.com/HumanBrainProject/fairgraph"

[tool.setuptools.packages.find]
include = ["fairgraph*"]

[build-system]
 requires = [
     "setuptools",
     "wheel",
 ]
 build-backend = "setuptools.build_meta"

[tool.black]
line-length = 119