[project]
name = "fairgraph"
version = "0.13.1"
description = "Python API for the EBRAINS Knowledge Graph"
readme = "README.md"
authors = [
    { name="Andrew P. Davison", email="andrew.davison@cnrs.fr" }
]
requires-python = ">=3.9"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3"
]
keywords = ["ebrains", "hbp", "metadata", "electrophysiology", "knowledge-graph"]
dependencies=[
    "ebrains-kg-core",
    "openminds>=0.4.0",
    "python-dateutil",
    "tabulate",
    "requests"
]

[project.optional-dependencies]

dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "coverage",
    "build",
    "setuptools",
    "wheel",
    "sphinx",
    "sphinxawesome_theme",
    "black",
    "twine"
]

docs = [
    "sphinx",
    "sphinxawesome_theme"
]

[project.urls]
"Homepage" = "https://github.com/HumanBrainProject/fairgraph"

[tool.setuptools.packages.find]
include = ["fairgraph*"]

[build-system]
 requires = [
     "setuptools",
     "wheel",
 ]
 build-backend = "setuptools.build_meta"

[tool.black]
line-length = 119